--- a/resources/css/components/mini-search.css
+++ b/resources/css/components/mini-search.css
@@ -31,6 +31,7 @@
         grid-area: search;
         display: grid;
         place-items: center;
+        justify-content: end;
     }
     #mini-search input {
         border-style: none none solid;
@@ -48,7 +49,6 @@
         transform: scaleX(0);
         transform-origin: right;
         transition: transform 200ms ease-out;
-        position: fixed;
     }
     #search-animation-trigger:checked ~ input {
         transform: scaleX(1);
